--- a/index.html
+++ b/index.html
@@ -1,81 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>HTML Challenge</title>
+    <h1>HTML Challenge</h1>
+    <hr>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>Karla's Personal Site</title>
-</head>
-
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td> <img src="ladybug.png" alt="Karlas Profile Pic"></td>
-      <td>
-        <h1>Karla Austin</h1>
-        <p><strong>Currently a </strong><em>Solutions Architect at <a href="https://www.bullhorn.com/">Bullhorn</a>.</em></p>
-        <p>I am learning web programing and love coffee and Diet Coke.</p>
-      </td>
-    </tr>
-
-  </table>
-
-  <hr>
-  <h3>Education</h3>
-  <ul>
-    <li>Bachelors in Business Administratin</li>
-    <li>School of Google</li>
-    <li><a href="https://calbaptist.edu/">Masters in Business Adminstration</a></li>
-  </ul>
-  <hr>
-  <h3>Hobbies</h3>
-  <ol>
-    <li><a
-        href="https://www.bing.com/ck/a?!&&p=9efb3ffe11aac848JmltdHM9MTY2NzE3NDQwMCZpZ3VpZD0wODRlMWJmOC0xMDkzLTZhNzAtMDE3ZS0wYjEwMTE2ODZiNjQmaW5zaWQ9NTQ3MQ&ptn=3&hsh=3&fclid=084e1bf8-1093-6a70-017e-0b1011686b64&psq=why+you+should+read&u=a1aHR0cHM6Ly93d3cudW9wZW9wbGUuZWR1L2Jsb2cvd2h5LWl0cy1pbXBvcnRhbnQtdG8tcmVhZC8jOn46dGV4dD1UaGUlMjBNYW55JTIwQmVuZWZpdHMlMjBvZiUyMFJlYWRpbmclMjAxJTIwU3RyZW5ndGhlbnMlMjBCcmFpbiw3JTIwRW5oYW5jZXMlMjBjcmVhdGl2aXR5JTIwLi4uJTIwOCUyMExvd2VycyUyMFN0cmVzcyUyMA&ntb=1">Reading</a>
-    </li>
-    <li>Walking</li>
-    <li><a href="https://www.womenshealthmag.com/fitness/a19931853/swim-workout-0/">Swimming</a></li>
-  </ol>
-
-  <a href="contact.html">Contact Information</a> <br>
-
-  <a href="skills.html">Skills & Experience</a>
-<hr>
-  <h3>Experience Details</h3>
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Location Details</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2000-2020</td>
-        <td>Staffing Indutry</td>
-      </tr>
-      <tr>
-        <td>2020-2021</td>
-        <td>Staffing Remote work</td>
-      </tr>
-      <tr>
-        <td>2020-Now</td>
-        <td>Software/Tech Indutry</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Programming ⭐</td>
-      <td>Staffing ⭐⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>HTML ⭐</td>
-      <td>Painting ⭐⭐⭐⭐ </td>
-    </tr>
-
-  </table>
-</body>
-
+  <body>
+<a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/Heading_Elements">Link to MDN Documentation</a>
+<table>
+  <tr>
+  <td>One</td>
+  <td>Two</td>
+  </tr>
+  <tr>
+    <td>Three</td>
+    <td>Four</td>
+  </tr>
+</table>
+  </body>
 </html>
