--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <li><a href="https://www.womenshealthmag.com/fitness/a19931853/swim-workout-0/">Swimming</a></li>
   </ol>
 
-  <a href="contact.html">Contact Information</a> <br>
+  <a href="Contact.html">Contact Information</a> <br>
 
   <a href="skills.html">Skills & Experience</a>
 <hr>
