--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <a href="Contact.html">Contact Information</a> <br>
 
-  <a href="skills.html">Skills & Experience</a>
+  <a href="Skills.html">Skills & Experience</a>
 <hr>
   <h3>Experience Details</h3>
   <table cellspacing="10">
